# nope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  default.nix  dist-workspace.toml  flake.nix  result  shell.nix
src/: checker.rs  cli.rs  config.rs  init.rs  main.rs
src/init/: mod.rs
src/init/scripts/: init.bash  init.powershell  init.zsh
wix/: main.wxs
