[package]
name = "nope-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for keeping track of commands you regret running."
license = "GPL-3.0-or-later"
repository = "https://github.com/v81d/nope"
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "nope"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
tabled = "0.20.0"
toml = "1.1.1"
